fix alignment of carousel buttons

--- a/elements/bulbs-video/elements/carousel-buttons.scss
+++ b/elements/bulbs-video/elements/carousel-buttons.scss
@@ -9,6 +9,10 @@
   justify-content: space-around;
   width: 2em;
 
+  > i {
+    margin: 0 auto;
+  }
+
   &:hover {
     opacity: .8;
   }
